fix(client-interaction): fix checkbox alignment
#17

--- a/interaction/app/default/src/scss/theme.scss
+++ b/interaction/app/default/src/scss/theme.scss
@@ -557,6 +557,17 @@ $icon-survey-smile-off: './assets/static/icons/smile-off.png';
       textarea {
         resize: none;
       }
+
+
+      &.vvc-checkbox{
+        display: flex;
+        align-items: center;
+        
+        input{
+          flex: 0.2;
+          width: auto;
+        }
+      }
     }
     .vvc-input-list {
       padding: 8px 0;
